# Alesh

./: CMakeLists.txt  README.md
examples/: ex1.ash
src/: main.cpp
src/ast/: ast.hpp  expr.hpp  globals.hpp  visitor.hpp
src/ast/base/: program.hpp
src/ast/expressions/: assignment.hpp  binary.hpp  identifier.hpp
src/ast/literals/: number.hpp  string.hpp
src/ast/statements/: function.hpp  return.hpp
src/lexer/: lexer.cpp  lexer.hpp  token.hpp
src/parser/: ast.hpp  parser.cpp  parser.hpp
src/utils/: color.hpp
